Added Migration and Scaffolding

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VisitorManagementStudent2022-a70d460e-60e6-414a-bbf9-384ff2fa576e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-FFMHC47\\SQLEXPRESS;Integrated Security=True;Database=VisitorManagementStudent2020;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -10,3 +10,10 @@
   },
   "AllowedHosts": "*"
 }
+
+
+
+// "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VisitorManagementStudent2022-a70d460e-60e6-414a-bbf9-384ff2fa576e;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+
+//Data Source=DESKTOP-FFMHC47\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
